@@ -55,6 +55,10 @@ our $WEBKDC_PRINCIPAL;
 our $LOGIN_URL;
 our $FATAL_PAGE = '';
 
+our @MEMCACHED_SERVERS;
+our $RATE_LIMIT_THRESHOLD;
+our $RATE_LIMIT_INTERVAL;
+
 our $EXPIRING_PW_SERVER;
 our $EXPIRING_PW_WARNING;
 our $EXPIRING_PW_URL;
